--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,26 @@ footer {
 .options {
 	margin-bottom: 30px;
 }
+
+form span {
+	color: black;
+}
+
+.intro.jogo1q4, .intro.jogo1q10{
+	margin-top: 0px;
+	margin-bottom: 5px;
+}
+
+.jogo2q1 {
+	min-width: 650px;
+	margin-left: 30px!important;
+}
+
+.jogo2q3 span {
+	color: #9e9e9e;
+}
+
+.jogo2q3 .seis {
+	font-size: 18px!important;
+	color: #bdbdbd;
+}
